# boring-agent-memory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
benchmarks/v1/: cases.jsonl
benchmarks/v1/corpus/canonical/: alerts.md  analytics.md  backups.md  billing.md  browser.md  caching.md  database.md  deployments.md  exports.md  feature-flags.md  imports.md  incidents.md  queues.md  releases.md  search.md  sessions.md  storage.md  uploads.md  webhooks.md  workers.md
benchmarks/v1/corpus/history/: alerts-legacy.md  analytics-legacy.md  backups-legacy.md  billing-legacy.md  browser-legacy.md  (+15 more)
benchmarks/v1/results/: python-3.14-macos-arm64.json
benchmarks/v2/: cases.jsonl  mutations.jsonl
benchmarks/v2/results/: python-3.14-macos-arm64.json
docs/: agent-prompt.md  architecture.md  benchmark-v1.md  benchmark-v2.md  canonical-first-memory.md  cli.md  comparison.md  configuration.md  evaluation.md  hermes-integration.md  privacy-model.md  python-api.md  release-checklist.md  release-notes-v0.2.0.md  research-notes.md  roadmap.md  status-and-gaps.md
evals/: README.md  golden.jsonl
evals/fixtures/privacy_docs/: deployment.md
evals/fixtures/stale_docs/: old-workday-report.md
examples/: claude_code.md  claude_code_memory.yaml  codex.md  codex_memory.yaml  hermes_agent_instructions.md  hermes_config.yaml  hermes_memory.yaml
proposals/: future_graph_layer.md  future_vector_layer.md
scripts/: demo_hermes_layer.py  generate_benchmark_v1.py  repo_score.py  run_benchmark_v1.py  run_benchmark_v2.py  run_incremental_scenario.py
src/boring_agent_memory/: __init__.py  api.py  benchmark.py  canonical.py  chunking.py  cli.py  config.py  embeddings.py  eval.py  index.py  ingest.py  privacy.py  query.py  schema.py  server.py  snippets.py
tests/: test_api.py  test_benchmark.py  test_canonical.py  test_chunking.py  test_cli.py  test_config_build.py  test_demo.py  test_embeddings.py  test_eval.py  test_index_build.py  test_index_update.py  test_privacy_filters.py  test_query_ranking.py  test_schema_migrations.py  test_version.py
(+53 files in other folders)
