[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "boring-agent-memory"
version = "0.1.0"
description = "A boring, local-first BM25 memory layer for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Boring Agent Memory contributors" }]
keywords = [
  "agent-memory",
  "bm25",
  "sqlite",
  "fts5",
  "rag",
  "local-first",
  "retrieval",
  "source-grounded",
  "privacy-preserving",
]
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/hskl18/boring-agent-memory"
Repository = "https://github.com/hskl18/boring-agent-memory"
Issues = "https://github.com/hskl18/boring-agent-memory/issues"

[project.scripts]
bam = "boring_agent_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
